--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
 body {
+  /* background-image: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet
+  ); */
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100vh;
+}
+#output {
+  color: #fff;
+  font-size: 30px;
+  cursor: pointer;
+}
+.tippy-content {
+  color: violet;
 }
