--- a/style.css
+++ b/style.css
@@ -1,19 +1,106 @@
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+:root {
+  --select-border: #777;
+  --select-focus: blue;
+  --select-arrow: var(--select-border);
+}
 body {
-  /* background-image: linear-gradient(
-    to right,
-    red,
-    orange,
-    yellow,
-    green,
-    blue,
-    indigo,
-    violet
-  ); */
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-
-  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  background-size: 100% 100%;
   height: 100vh;
 }
+.container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.container h1 {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 2.5rem;
+  color: whitesmoke;
+}
+.inputArea {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+button {
+  cursor: pointer;
+  background: #3498db;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  padding: 6px 15px;
+  text-decoration: none;
+  border: 0;
+  font-size: 18px;
+}
+button:hover {
+  background: #3cb0fd;
+  text-decoration: none;
+}
+input {
+  width: 80px;
+  height: 30px;
+  cursor: pointer;
+}
+input:hover {
+  opacity: 0.6;
+}
+select {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0 1em 0 0.5em;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  outline: none;
+}
+.select {
+  width: 100%;
+  min-width: 15ch;
+  max-width: 30ch;
+  border: 1px solid var(--select-border);
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1.25rem;
+  cursor: pointer;
+
+  line-height: 1.1;
+  background-color: #fff;
+  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+  display: grid;
+  grid-template-areas: "select";
+  align-items: center;
+}
+.select::after {
+  content: "";
+  width: 0.8em;
+  height: 0.5em;
+  background-color: var(--select-arrow);
+  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+  justify-self: end;
+}
+select,
+.select:after {
+  grid-area: select;
+}
+
 #output {
   color: #fff;
   font-size: 30px;
