--- a/style.css
+++ b/style.css
@@ -113,6 +113,18 @@ select,
   font-size: 30px;
   cursor: pointer;
 }
+footer {
+  font-size: 1.5rem;
+  text-align: center;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+footer a {
+  text-decoration: none;
+  color: whitesmoke;
+}
 .tippy-content {
   color: violet;
 }
